--- a/src/views/components/main-sidebar.ejs
+++ b/src/views/components/main-sidebar.ejs
@@ -21,12 +21,38 @@
         </a>
       </li>
       <li>
-        <a href="/classrooms" class="flex items-center p-2 text-white rounded-lg group hover:bg-gray-700">
+        <button type="button" class="flex items-center w-full p-2 text-base text-white transition duration-75 rounded-lg group hover:bg-gray-700" aria-controls="sidebar-classrooms-menu" data-collapse-toggle="sidebar-classrooms-menu">
           <svg class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
             <path fill-rule="evenodd" d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z" clip-rule="evenodd" />
           </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Classrooms</span>
-        </a>
+          <span class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">Classrooms</span>
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
+          </svg>
+        </button>
+        <ul id="sidebar-classrooms-menu" class="hidden py-2 space-y-2">
+          <li>
+            <a href="/classrooms" class="flex items-center w-full p-2 text-white transition duration-75 rounded-lg pl-11 group hover:bg-gray-700">
+              <svg class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5" />
+              </svg>
+              <span class="flex-1 ms-3 whitespace-nowrap">All Classrooms</span>
+            </a>
+          </li>
+          <li>
+            <a href="/classrooms/new" class="flex items-center w-full p-2 text-white transition duration-75 rounded-lg pl-11 group hover:bg-gray-700">
+              <svg class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 48 48">
+                <mask id="svg-plus-hole-mask">
+                  <rect x="0" y="0" width="48" height="48" fill="white" />
+                  <path d="M24 16V32" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M16 24L32 24" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </mask>
+                <path d="M24 44C35.0457 44 44 35.0457 44 24C44 12.9543 35.0457 4 24 4C12.9543 4 4 12.9543 4 24C4 35.0457 12.9543 44 24 44Z" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linejoin="round" mask="url(#svg-plus-hole-mask)" />
+              </svg>
+              <span class="flex-1 ms-3 whitespace-nowrap">Create Classroom</span>
+            </a>
+          </li>
+        </ul>
       </li>
       <li>
         <button type="button" class="flex items-center w-full p-2 text-base text-white transition duration-75 rounded-lg group hover:bg-gray-700" aria-controls="sidebar-user-menu" data-collapse-toggle="sidebar-user-menu">
@@ -108,6 +134,7 @@
     const links = {
       "/dashboard": document.querySelector("[href='/dashboard']"),
       "/classrooms": document.querySelector("[href='/classrooms']"),
+      "/classrooms/new": document.querySelector("[href='/classrooms/new']"),
       "/user": document.querySelector("[href='/user']"),
       "/user/settings": document.querySelector("[href='/user/settings']"),
       "/user/security": document.querySelector("[href='/user/security']"),
