--- a/src/views/pages/class/tasks.ejs
+++ b/src/views/pages/class/tasks.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <%- include("../../components/main-sidebar.ejs") %>
+  <%- include("../../components/classroom-sidebar.ejs"), { classId } %>
   <main class="sm:ml-64 p-6">
     <div class="flex justify-between items-center mb-6">
       <h1 class="text-2xl font-semibold text-text">Classroom Tasks</h1>
