--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -9,7 +9,7 @@
 <body>
   <%- include("../components/main-sidebar.ejs") %>
   <main class="sm:ml-64 p-6">
-    <h1 class="text-3xl font-semibold mb-6">Welcome back, <span id="username">User</span>!</h1>
+    <h1 class="text-3xl font-semibold mb-6">Welcome back, <span id="user-name">User</span>!</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
