--- a/src/views/pages/user/profile.ejs
+++ b/src/views/pages/user/profile.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <%- include("../../components/head.ejs") %>
+  <script src="/js/user.js"></script>
   <title>MPC Lab | Profile</title>
 </head>
 
@@ -11,24 +12,24 @@
   <main class="sm:ml-64 p-6">
     <h1 class="text-2xl font-semibold mb-6">Profile</h1>
 
-    <div class="bg-background-50 shadow-md rounded-lg p-6">
+    <div id="profile" class="bg-background-50 shadow-md rounded-lg p-6">
       <h2 class="text-xl font-bold mb-4">User Information</h2>
 
       <div class="mb-4">
         <label for="display-name" class="block text-sm font-medium text-text">Display Name</label>
-        <input type="text" id="display-name" value="User" class="mt-1 block w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-primary-500" />
+        <input type="text" id="display-name" class="mt-1 block w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-primary-500" />
       </div>
 
       <div class="mb-4">
-        <p class="text-sm text-text"><strong>@<span id="username">user</span></strong></p>
+        <p class="text-sm text-text"><strong>@<span id="username"></span></strong></p>
       </div>
 
       <div class="mb-4">
-        <p class="text-sm text-text"><strong>Email:</strong> <span id="email">user@example.com</span></p>
+        <p class="text-sm text-text"><strong>Email:</strong> <span id="email"></span></p>
       </div>
 
       <div class="mb-4">
-        <p class="text-sm text-text"><strong>Joined:</strong> <span id="joined-at">2021-01-01</span></p>
+        <p class="text-sm text-text"><strong>Joined:</strong> <span id="joined-at"></span></p>
       </div>
 
       <button id="update-profile" class="mt-4 bg-primary-500 text-white px-4 py-2 rounded hover:bg-primary-400 transition-colors duration-200">Save Changes</button>
@@ -39,6 +40,44 @@
       </div>
     </div>
   </main>
+  <script>
+    const user = new User(app);
+
+    user.getUser().then((response) => {
+      if (response.status === "success") {
+        document.getElementById("display-name").value = response.data.displayName;
+        document.getElementById("username").textContent = response.data.username;
+        document.getElementById("email").textContent = response.data.email;
+        document.getElementById("display-name").value = response.data.displayName;
+        document.getElementById("joined-at").textContent = new Date(response.data.createdAt).toLocaleDateString();
+      }
+    });
+
+    updateProfileButton = document.getElementById("update-profile");
+    updateProfileButton.addEventListener("click", async () => {
+      updateProfileButton.disabled = true;
+      const displayName = document.getElementById("display-name").value;
+      const response = await user.updateDisplayName(displayName);
+      if (response.status === "success") {
+        app.ui.notification(
+          "alert",
+          response.message,
+          "success",
+          document.getElementById("profile"),
+          "profile"
+        );
+      } else {
+        app.ui.notification(
+          "alert",
+          response.message,
+          "error",
+          document.getElementById("profile"),
+          "profile"
+        );
+      }
+      updateProfileButton.disabled = false;
+    });
+  </script>
 </body>
 
 </html>
